<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/linear_corner_white"
    android:orientation="vertical" >
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="18.0dip"
        android:duplicateParentState="true"
        android:ellipsize="end"
        android:gravity="left|center"
        android:includeFontPadding="false"
        android:singleLine="true"
        android:text="@string/conflict_title"
        android:textStyle="bold"
        android:textSize="20sp" />
	
    <View 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="#FFFFF0" />
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="18.0dip"
        android:duplicateParentState="true"
        android:ellipsize="end"
        android:gravity="left|center_vertical"
        android:includeFontPadding="false"
        android:text="@string/conflict_content"
        android:textSize="16.0sp" />
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">
        <Button 
            android:id="@+id/conflict_logout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="1dp"
            android:text="@string/conflict_logout"
            android:textSize="18sp"
            android:background="@drawable/selector_conflict_button"/>
        <Button 
            android:id="@+id/conflict_re_login"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginLeft="1dp"
            android:text="@string/conflict_re_login"
            android:textSize="18sp"
            android:background="@drawable/selector_conflict_button"/>
    </LinearLayout>
</LinearLayout>
