<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_lgoin"
    android:gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="58dp"
        android:layout_height="58dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/ic_launcher"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/login_linear_bg"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="10dp" >

            <TextView
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:background="@drawable/icon_user"
                android:padding="5dp"
                android:layout_marginRight="10dp"
                android:textSize="16.5dip" />
	
            <TextView 
			    android:layout_width="1dp"
			    android:layout_height="match_parent"
			    android:layout_marginRight="5dp"
			    android:background="#fff" />
            <EditText
                android:id="@+id/login_edt_account"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint=""
                android:imeActionLabel="@string/next"
                android:maxLength="50"
                android:singleLine="true"
                android:textColor="@color/default_textColor"
                android:textSize="18sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1.0dp"
            android:background="#fff" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="10dp" >

            <TextView
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:background="@drawable/icon_password"
                android:padding="5dp"
                android:textSize="16.5dip" />
			<TextView 
			    android:layout_width="1dp"
			    android:layout_marginRight="5dp"
			    android:layout_height="match_parent"
			    android:background="#fff" />
            <EditText
                android:id="@+id/login_edt_passwd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint=""
                android:inputType="textPassword"
                android:maxLength="50"
                android:singleLine="true"
                android:textColor="@color/default_textColor"
                android:textSize="18sp" />
        </LinearLayout>
        
        <View
            android:layout_width="match_parent"
            android:layout_height="1.0dp"
            android:background="#fff" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:paddingTop="10dp" >

            <TextView
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:background="@drawable/icon_password"
                android:padding="5dp"
                android:textSize="16.5dip" />
			<TextView 
			    android:layout_width="1dp"
			    android:layout_marginRight="5dp"
			    android:layout_height="match_parent"
			    android:background="#fff" />
            <EditText
                android:id="@+id/login_edt_server"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint=""
                android:maxLength="50"
                android:singleLine="true"
                android:textColor="@color/default_textColor"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/login_commit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_login_button"
        android:gravity="center"
        android:onClick="onClick" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32.0dip"
        android:layout_marginRight="32.0dip"
        android:layout_marginTop="5dp"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/login_savepasswd_check"
            android:layout_width="wrap_content"
            android:layout_height="40.0dip"
            android:button="@drawable/selector_login_checkbox"
            android:checked="true"
            android:text="@string/login_save_passwd"
            android:textColor="@color/default_textColor" />

        <View
            android:layout_width="0dp"
            android:layout_height="0.0px"
            android:layout_weight="1.0" />

        <CheckBox
            android:id="@+id/login_hide_check"
            android:layout_width="wrap_content"
            android:layout_height="40.0dip"
            android:button="@drawable/selector_login_checkbox"
            android:checked="false"
            android:text="@string/login_hide"
            android:textColor="@color/default_textColor" />
    </LinearLayout>

</LinearLayout>